# scikit-prox

./: .readthedocs.yaml  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml  test.yml
docs/: conf.py  examples.rst  index.rst  install.rst  intro.rst  license.rst  requirements.txt
docs/joss/: paper.md
skprox/: _gep.py  _pgd.py  _proximal_operators.py  discriminant_analysis.py  proximal_operators.py
skprox/cross_decomposition/: __init__.py
skprox/decomposition/: __init__.py  _ica.py  _pca.py
skprox/linear_model/: __init__.py  _base.py  _logistic.py
skprox/operators/: __init__.py  _composite.py  _dummy.py  _tv.py  _tvl1.py
skprox/test/: test_logistic.py  test_package.py  test_regression.py
