[tool.poetry]
name = "scikit-prox"
version = "0.0.3"
description = "A package for solving regularised optimisation problems in a scikit-learn style."
authors = ["jameschapman19 <james.chapman.19@ucl.ac.uk>"]
readme = "README.md"
packages = [{include = "skprox"}]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.2.1"
scikit-image = "^0.19.3"
pyproximal = "^0.5.0"
pytest = "^7.2.1"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.910"
pylint = "^2.12.2"
pytest-cov = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
